package tech.tryu.facotrymethod.product;

/**
 *
 * Button类
 * @author YU
 */
public interface Button {

    void render();

    void onClick(Function function);
}
